--- a/styles.css
+++ b/styles.css
@@ -29,26 +29,35 @@ main {
 
 header {
     height: 10%;
-    background-color: #dddddd;
+    background-color: #cccccc;
 }
 
 footer {
     height: 10%;
+    background-color: #cccccc;
+}
+
+#fileNav {
+    width: 20%;
     background-color: #dddddd;
 }
 
-#fileArea {
-    width: 20%;
-    background-color: #eeeeee;
-}
-
-#noteArea {
+#editor {
     width: 100%;
     height: 100%;
     background-color: #ffffff;
 }
 
+#toolbar {
+    width: 100%;
+    min-height: 40px;
+    height: 10%;
+    background-color: #eeeeee;
+    padding: 8px;
+}
+
 #edit {
     width: 100%;
     height: 400px;
+    border: 2px solid black;
 }
