--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,9 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	vertical-align: baseline;
+    box-sizing: border-box;
 }
+
 
 body, html {
     height: 100%;
@@ -28,16 +30,28 @@ main {
 }
 
 header {
+    padding: 16px;
     height: 10%;
     background-color: #cccccc;
 }
 
 footer {
+    padding: 16px;
     height: 10%;
     background-color: #cccccc;
 }
 
+ul {
+    padding-left: 16px;
+    list-style: none;
+}
+
+li {
+    margin: 8px;
+}
+
 #fileNav {
+    min-width: 180px;
     width: 20%;
     background-color: #dddddd;
     padding: 8px;
@@ -52,19 +66,32 @@ footer {
 #toolbar {
     display: block;
     width: 100%;
-    min-height: 40px;
-    height: 10%;
+    height: 40px;
     background-color: #eeeeee;
     padding: 8px;
 }
 
 #edit {
+    display: inline;
     width: 100%;
-    height: 400px;
+    height: calc(100% - 40px);
     border: 2px solid black;
 }
 
 #titleInput {
     width: 180px;
 }
+
+#fileList {
+    padding: 0;
+}
+
+.selectedFile {
+    font-weight: bold;
+}
+
+.nonSelectedFile {
+    font-weight: normal;
+}
+
 
