--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ li {
 
 #fileNav {
     min-width: 180px;
-    width: 20%;
+    width: 25%;
     background-color: #dddddd;
 }
 
@@ -89,6 +89,7 @@ li {
 #fileBox {
     width: 100%;
     height: calc(100% - 40px);
+    margin-top: 8px;
 }
 
 #fileList {
